--- a/css/login.css
+++ b/css/login.css
@@ -109,19 +109,17 @@ select {
     font-family: Karla;
     font-size: 20px;
     font-weight: bold;
-    display: inline-block;
     border-radius: 23.011px;
-    border: 0px
+    text-align: center;
+    padding-top: 10px;
+    border: 0px;
+    text-decoration: none;
+    color: black;
 }
 
 .account {
     font-weight: lighter;
     text-align: center;
-}
-
-a {
-    text-decoration: none;
-    color: black;
 }
 
 footer {
