--- a/css/register.css
+++ b/css/register.css
@@ -118,16 +118,22 @@ select {
     border: 0px
 }
 
+
 #send {
     background-color: #1CD1B0;
     width: 220px;
-    height: 40px;
+    height: 30px;
     font-family: Karla;
     font-size: 20px;
     font-weight: bold;
     display: inline-block;
     border-radius: 23.011px;
-    border: 0px
+    border: 0px;
+    padding-top: 8px;
+    margin-top:20px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
 }
 
 .account {
