--- a/css/home.css
+++ b/css/home.css
@@ -200,4 +200,19 @@ footer {
     text-align: center;
     
     
-}
+}* .button {
+    background-color: #00669F;
+    border-radius: 50%;
+    bottom: 50%;
+    color: #FFFFFF;
+    font-size: 30px;
+    height: 40px;
+    width: 40px;
+    
+    right: 50px;
+    padding: 10px;
+    position: fixed;
+    text-align: center;
+    z-index: 999;
+    text-decoration: none;
+} 
