--- a/css/home.css
+++ b/css/home.css
@@ -200,7 +200,7 @@ footer {
     text-align: center;
     
     
-}* .button {
+} .button {
     background-color: #00669F;
     border-radius: 50%;
     bottom: 50%;
@@ -208,7 +208,7 @@ footer {
     font-size: 30px;
     height: 40px;
     width: 40px;
-    
+    margin: 0px;
     right: 50px;
     padding: 10px;
     position: fixed;
