--- a/css/add.css
+++ b/css/add.css
@@ -5,21 +5,24 @@
     color: white;
 }
 
-
 .form-bg {
-    margin: 1% auto 5%;
+    margin: 1% auto 1%;
     background-color: #00669F;
     border-radius: 49.0901px;
     width: 60%;
     height: 80%;
     padding: 3% 3%;
-    box-sizing:border-box;
-        /* position: absolute; */
+    box-sizing: border-box;
+    position: relative
+}
+
+form{
+    position: relative
 }
 
 main {
     width: auto;
-    
+
 }
 
 h3 {
@@ -32,6 +35,7 @@ h3 {
 
 p {
     text-align: center;
+    padding: 0px;
     margin: 10px;
 }
 
@@ -40,18 +44,15 @@ p {
     width: 45%;
     margin: 2%;
     align-items: flex-start;
-    
-
 }
 
 .field {
-    width: 100%; 
+    width: 100%;
     margin: 10px;
-    
 }
 
 .description {
-    margin-top: 10%; 
+    margin-top: 10%;
     padding: 10px;
     border-radius: 15.3407px;
     box-sizing: border-box;
@@ -67,7 +68,11 @@ input {
     padding: 10px
 }
 
-select{
+.file {
+    border: 1.53407px solid rgba(0, 0, 0, 0.0);
+}
+
+select {
     padding: 10px
 }
 
@@ -78,21 +83,19 @@ textarea {
 .submit {
     background-color: #1CD1B0;
     width: 50%;
-    font-family: Karla;
+    font-family: Inter;
     font-size: 20px;
-    font-weight: bold;
     border: 0px;
-    padding: 8px;
-    margin: 5% 25% auto;
+    padding: 15px;
+    margin: 1% 25% auto;
+    transition: 0.5s;
 }
 
-
-footer {
-    background: #00669F;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    height: 50px;
-    width: 100%;
-    bottom: 0px;
+h1 a {
+    margin: 0%;
+    text-decoration: none;
+    background-color: transparent;
+    padding:0%;
 }
 
 .terms {
@@ -105,11 +108,34 @@ footer {
     display: block;
     left: 0;
     width: unset;
-}   
-/* label{
-    margin: 10px;
-} */
+}
 
 .add {
     text-align: left;
 }
+
+.required::before {
+    content: "*"
+}
+
+input[type="text"]:focus {
+    background: #AFF9FE;
+    border: 1.53407px solid #DDDDDD;
+    outline: none;
+}
+
+input[type="date"]:required {
+    border: 1px solid red;
+    outline: none;
+}
+
+input[type="submit"]:hover {
+    position: relative;
+    left: -1%;
+    background: #001D2D; 
+    font-size: larger;
+    width: 52%;
+    color: white; 
+    font-size: 130%;
+}  
+
