--- a/css/contact.css
+++ b/css/contact.css
@@ -21,8 +21,6 @@ body {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-
-
     z-index: 2;
 }
 
@@ -46,14 +44,14 @@ h1 {
     font-size: 25px;
     font-weight: normal;
     height: 84px;
-
+    
     padding: 10px 100px;
     position: absolute;
     top: 0px;
 }
 
 .login {
-    position: relative;
+    /* position: relative; */
     width: 645;
     height: 682;
     display: flex;
@@ -75,13 +73,14 @@ h2 {
     font-size: 50px;
 }
 
+
 input {
     display: block;
     margin: 20px 0px;
     border-color: black;
     border-width: 0.5mm;
     font-family: Karla;
-    width: 450px;
+    width: 93%;
     height: 40px;
     padding: 0px 15px;
     font-size: 18px;
@@ -99,7 +98,6 @@ select {
 .buttons {
     display: flex;
     justify-content: space-between;
-
 }
 
 #reset {
@@ -137,17 +135,13 @@ select {
     border-width: 0.5mm;
 }
 
-
-
 footer {
     background: #00669F;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 50px;
     width: 100%;
     bottom: 0px;
-
-
-    position: absolute;
+    position:absolute;
 }
 
 .terms {
@@ -155,3 +149,4 @@ footer {
     text-align: center;
     font-size: 13px;
 }
+
