--- a/css/contact.css
+++ b/css/contact.css
@@ -1,152 +1,61 @@
-body {
-    margin: 0px;
+@import url(login.css);
 
-}
-
-.pcVector {
-    position: absolute;
-    width: 80px;
-    height: 60px;
-    bottom: 5px;
-    padding-left: 10px;
-}
-
-.discount {
-    background-color: #1CD1B0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    height: 30px;
-    width: 100%;
-    padding-left: 10px;
-    padding-top: 5px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    z-index: 2;
 }
 
-
-header {
-    background: #00669F;
-    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
-    height: 70px;
-
-    position: relative;
-    top: 0px;
-    z-index: 1;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-
+main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h1 {
-    color: #FFFFFF;
-    font-size: 25px;
-    font-weight: normal;
-    height: 84px;
-    
-    padding: 10px 100px;
-    position: absolute;
-    top: 0px;
-}
-
-.login {
-    /* position: relative; */
-    width: 645;
-    height: 682;
-    display: flex;
-    justify-content: center;
-    font-family: Karla;
-    font-weight: bolder;
-
-    top: 100px;
-}
-
-h2 {
-    color: black;
-    text-align: left;
-    padding: 0px;
-    margin-top: 40px;
-    margin-bottom: 60px;
-    font-family: Inter;
-    font-weight: bolder;
-    font-size: 50px;
-}
-
-
-input {
-    display: block;
-    margin: 20px 0px;
-    border-color: black;
-    border-width: 0.5mm;
-    font-family: Karla;
-    width: 93%;
-    height: 40px;
-    padding: 0px 15px;
-    font-size: 18px;
-}
-
-select {
-    display: block;
-    border-color: black;
-    border-width: 0.5mm;
-    width: 460px;
-    height: 40px;
-    font-family: Karla;
-}
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-}
 
 #reset {
     background-color: #888888;
     color: white;
-    display: inline-block;
-    height: 40px;
-    width: 220px;
-    font-family: Karla;
+    width: 40%;
     font-size: 20px;
     font-weight: bold;
     border-radius: 23.011px;
-    border: 0px
+    border: 0px;
+    margin:0;
 }
 
 #send {
-    background-color: #1CD1B0;
-    width: 220px;
-    height: 30px;
-    font-family: Karla;
-    font-size: 20px;
-    font-weight: bold;
-    display: inline-block;
-    border-radius: 23.011px;
-    border: 0px;
-    padding-top: 8px;
-    margin-top:20px;
-    text-align: center;
-    text-decoration: none;
-    color: black;
+    width: 40%;
 }
 
-#comments {
+textarea {
     border-color: black;
     border-width: 0.5mm;
-}
-
-footer {
-    background: #00669F;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    height: 50px;
     width: 100%;
-    bottom: 0px;
-    position:absolute;
 }
 
-.terms {
-    color: white;
-    text-align: center;
-    font-size: 13px;
+
+.buttons {
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10px;
 }
 
+footer>p {
+    padding: 15px;
+}
+
+@media screen and (max-width: 480px) {
+    .login {
+        position: inherit;
+        width: 100%;
+    }
+
+    h2{
+        padding-left: 5%;
+    }
+    
+    footer>p {
+        padding:5%;
+    }
+}
