--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,8 @@
-body {
-    margin: 0px;
-
+* {
+    font-family: Roboto;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .pcVector {
@@ -16,13 +18,7 @@ body {
     box-sizing: border-box;
     height: 30px;
     width: 100%;
-    padding-left: 10px;
-    padding-top: 5px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-
-
+    padding: 10px 10px;
     z-index: 2;
 }
 
@@ -49,7 +45,7 @@ h1 {
 
     padding: 10px 100px;
     position: absolute;
-    top: 0px;
+    top: 15%;
 }
 
 .login {
@@ -59,8 +55,7 @@ h1 {
     display: flex;
     justify-content: center;
     font-family: Karla;
-    font-weight: bolder;
-
+    font-weight: bold;
     top: 100px;
 }
 
@@ -81,7 +76,7 @@ input {
     border-color: black;
     border-width: 0.5mm;
     font-family: Karla;
-    width: 450px;
+    width: 100%;
     height: 40px;
     padding: 0px 15px;
     font-size: 18px;
@@ -121,6 +116,7 @@ a {text-decoration: none;}
 .account {
     font-weight: lighter;
     text-align: center;
+    margin-top: 10%;
 }
 
 footer {
@@ -128,9 +124,7 @@ footer {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 50px;
     width: 100%;
-    bottom: 0px;
-
-
+    bottom: 0;
     position: absolute;
 }
 
@@ -138,4 +132,15 @@ footer {
     color: white;
     text-align: center;
     font-size: 13px;
+}
+
+@media screen and (max-width:480px){
+
+    form {
+        width: 100vw;     
+    }
+
+    h1{
+        padding: 10px 0 0 80px;
+    }
 }
