--- a/css/register.css
+++ b/css/register.css
@@ -1,6 +1,11 @@
+* {
+    margin: 0px;
+    padding:0px;
+    font-family: Roboto;
+}
+
 body {
     margin: 0px;
-
 }
 
 .pcVector {
@@ -60,7 +65,6 @@ h1 {
     justify-content: center;
     font-family: Karla;
     font-weight: bolder;
-
     top: 100px;
 }
 
@@ -68,8 +72,6 @@ h2 {
     color: black;
     top: 29px;
     text-align: left;
-    padding: 0px;
-    margin: 0px;
     margin-bottom: 40px;
     font-family: Inter;
     font-weight: bolder;
@@ -84,7 +86,7 @@ input {
     font-family: Karla;
     width: 450px;
     height: 40px;
-    padding: 0px 15px;
+    padding-left: 15px;
     font-size: 18px;
 }
 
@@ -94,7 +96,7 @@ select {
     border-color: black;
     border-width: 0.5mm;
     width:100%;
-    width: 483px;
+    width: 470px;
     height: 40px;
     font-family: Karla;
     font-size: 18px;
@@ -102,15 +104,14 @@ select {
 
 .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 #reset {
     background-color: #888888;
     color: white;
     display: inline-block;
-    height: 40px;
-    width: 220px;
+    width: 40%;
     font-family: Karla;
     font-size: 20px;
     font-weight: bold;
@@ -121,8 +122,8 @@ select {
 
 #send {
     background-color: #1CD1B0;
-    width: 220px;
-    height: 30px;
+    width: 40%;
+    height: 32px;
     font-family: Karla;
     font-size: 20px;
     font-weight: bold;
@@ -147,9 +148,11 @@ footer {
     height: 50px;
     width: 100%;
     bottom: 0px;
-
-
     position: absolute;
+}
+
+footer > p {
+    padding:10px;
 }
 
 .terms {
@@ -161,4 +164,30 @@ footer {
 a {
     text-decoration: none;
     color: black;
+}
+
+@media screen and (max-width:480px) {
+    h2{
+        padding: 0px 5%;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    input {
+        width: 355px;
+    }
+
+    select {
+        width: 100%;
+    }
+
+    main{
+        margin-top: 15%;
+    }
+
+    .register{
+        position:initial;
+    }
 }
