--- a/css/login.css
+++ b/css/login.css
@@ -121,7 +121,6 @@ a {text-decoration: none;}
 
 footer {
     background: #00669F;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 50px;
     width: 100%;
     bottom: 0;
@@ -134,6 +133,10 @@ footer {
     font-size: 13px;
 }
 
+footer>p {
+    padding: 15px;
+}
+
 @media screen and (max-width:480px){
 
     form {
@@ -142,5 +145,9 @@ footer {
 
     h1{
         padding: 10px 0 0 80px;
+    }
+
+    h2{
+        padding-left: 5%;
     }
 }
